# C-program

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  INDEX.md  PROJECT_STATUS.md  README.md  compile_flags.txt  debug_analysis.md  dispatch_service.h  hand_kd-tree.h  hand_kd_tree.h  implementation_plan.md  index_.md  kd-tree.h  kd_tree.h  kd_tree_analysis.md  kd_tree_debug_test.cpp  main.cpp  taxi_core.h  taxi_query_service.h  taxi_system.h  taxi_system_debug_test.cpp  数据结构课程设计选题说明表_内容.txt
.cph/: .A_Koshary.cpp_570fa4e871e97b2192b19a0143807b56.prob
build-codex-check/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile
data/datasets/nyc-taxi-trip-duration/: README.md
data/normalized/: README.md  drivers.csv  requests.csv
docs/: README.md  algorithm_and_strategy.md  glossary.md  index.md  ppt_prompt.md  region_design.md  system_modeling.md  timeline_model.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/design-docs/: algorithm-and-strategy.md  glossary.md  index.md  region-and-cell-design.md  system-modeling.md  timeline-model.md
docs/exec-plans/: index.md
docs/exec-plans/active/: dispatch-next-steps.md  project-status.md
docs/exec-plans/completed/: index.md
docs/references/: index.md
include/: cell_index.h  dispatch_batch.h  dispatch_replay.h  dispatch_replay_io.h  dispatch_strategy.h  kd_tree_spatial_index.h  mcmf_batch_strategy.h  nearest_free_taxi_strategy.h  requestcontext.h  spatial_index.h  taxi_domain.h  taxi_system.h  tile_grid_stats.h  tile_region_map.h
plan/: README.md  dispatch_next_steps.md
scripts/: architecture_lint.ps1  pre_submit_check.ps1  prepare_map_viewer_demo.ps1  project_doctor.ps1  run_cost_grid_search.ps1  run_report_scenarios.ps1
src/: cell_index.cpp  dispatch_replay.cpp  dispatch_replay_io.cpp  dispatch_strategy.cpp  k_sweep.cpp  kd_tree_spatial_index.cpp  main.cpp  mcmf_batch_strategy.cpp  replay_csv_demo.cpp  requestcontext.cpp  taxi_domain.cpp  taxi_system.cpp  tile_grid_stats.cpp  tile_region_map.cpp
tests/: cell_index_test.cpp  dispatch_batch_test.cpp  dispatch_replay_io_test.cpp  dispatch_replay_test.cpp  dispatch_strategy_test.cpp  kd_tree_spatial_index_test.cpp  mcmf_batch_strategy_test.cpp  requestcontext_test.cpp  taxi_system_test.cpp  tile_grid_stats_test.cpp  tile_region_map_test.cpp
tools/geojson_export/: go.mod  main.go
tools/go_batch_experiments/: README.md  go.mod  main.go
tools/go_csv_preprocess/: README.md  go.mod  main.go
tools/go_experiment_summary/: README.md  go.mod  main.go
tools/go_experiments/: go.mod  main.go  main_test.go
tools/python_kaggle_download/: README.md  download_dataset.py
tools/replay_visual_export/: go.mod  main.go  main_test.go
tools/route_visual_export/: go.mod  main.go  main_test.go
web/map_viewer/: README.md  index.html  package-lock.json  package.json
web/map_viewer/src/: App.tsx  styles.css
